<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fathuriady.torupiah.MainActivity">

    <TextView
        android:id="@+id/txtJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_judul"
        android:layout_centerHorizontal="true"
        android:textSize="27dp"
        />

    <TextView
        android:id="@+id/txtMataUang"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:text="@string/text_matauang"
        android:textSize="15.5dp"
        android:layout_below="@+id/txtJudul"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="170dp"
        android:layout_height="18dp"
        android:layout_below="@+id/txtJudul"
        android:layout_toRightOf="@+id/txtMataUang"
        />

    <TextView
        android:id="@+id/txtNominal"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/text_nominal"
        android:layout_below="@+id/txtMataUang"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/edtxtNominal"
        android:layout_below="@+id/txtMataUang"
        android:textSize="18sp"
        android:layout_toRightOf="@+id/txtNominal"
        android:background="#EEE"

        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/btnKonversi"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/button_konversi"
        android:layout_below="@+id/edtxtNominal"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:id="@+id/txtRp"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/text_rp"
        android:layout_below="@+id/btnKonversi"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/txtHasil"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@+id/btnKonversi"
        android:layout_toRightOf="@+id/txtRp"

        android:layout_marginTop="30dp"
        />
</RelativeLayout>
